update env, add datasource to app (not tested), add docker-compose